src/mock-data/data/samples/01-ingress-isolated-ns/01-ingress-isolated-ns-01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-ingress-isolated-ns-01
  labels:
    name: test-ingress-isolated-ns-01
