src/mock-data/data/samples/01-ingress-isolated-ns/01-ingress-isolated-ns-03-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-ingress-isolated-ns-01
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
